fix overflow

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -24,6 +24,7 @@ body {
 	background-position: top;
 	background-repeat: repeat-y;
 	background-size: cover;
+	overflow-x: hidden;
 }
 
 .title {
